More updates to search feature. Change from using the global br. to this. Fix some z-index issues Fix for fullscreen transition. Prefix some more CSS classes. Fix mobile menu bindings.

--- a/src/css/_MobileNav.scss
+++ b/src/css/_MobileNav.scss
@@ -8,6 +8,10 @@
 .mm-panel {
   font-size: $brFontSizeSmaller;
 }
+#mm-blocker,
+.mm-slideout {
+  z-index: $brZindexFullscreen + 2;
+}
 .mm-panel h1 {
   margin-top: 0;
   color: $brColorThemeBlueDarker;
@@ -18,7 +22,6 @@
 html.mm-background .BookReader {
   background-color: $brColorMainBg;
 }
-
 
 .BRmobileMenu {
   button { -webkit-appearance: initial; }
